Avoid gaps below categories listing
* Add 4em space below the content to leave space for working with
categories.
* Add white background to cx-translation-view-container effectively
hiding the gray gap when categories listing heights aren't matching.

Bug: T189632

--- a/modules/ui/styles/mw.cx.ui.Columns.less
+++ b/modules/ui/styles/mw.cx.ui.Columns.less
@@ -5,6 +5,9 @@
 	min-height: 100vh;
 	padding: 0 @personal-header-padding;
 	.clearfix;
+	&:after {
+		height: 4em;
+	}
 
 	&.disabled {
 		pointer-events: none;
