--- a/modules/ui/styles/mw.cx.ui.TranslationView.less
+++ b/modules/ui/styles/mw.cx.ui.TranslationView.less
@@ -10,7 +10,9 @@
 
 	.cx-translation-view-container {
 		.mw-ui-two-thirds;
+		background-color: #fff;
 		.box-shadow( 0 1px 1px rgba( 0, 0, 0, 0.15 ) );
+		border-radius: @borderRadius;
 		padding: 0;
 		z-index: 1;
 
